// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`differ > works ? 1`] = `
{
  "lineIds": [
    0.2,
    0.4,
    0.6,
    0.8,
  ],
  "steps": [
    [
      0.2,
      0.4,
      0.6,
      0.8,
    ],
    [],
  ],
}
`;

exports[`differ > works 1`] = `
{
  "lineIds": [
    0.25,
    0.3125,
    0.375,
    0.5,
    0.75,
  ],
  "steps": [
    [
      0.25,
      0.5,
      0.75,
    ],
    [
      0.25,
      0.375,
    ],
    [
      0.25,
      0.3125,
      0.375,
    ],
    [
      0.25,
      0.3125,
      0.375,
    ],
  ],
}
`;

exports[`differ > works when last line changes 1`] = `
{
  "lineIds": [
    0.5,
    0.75,
  ],
  "steps": [
    [
      0.5,
    ],
    [
      0.5,
      0.75,
    ],
  ],
}
`;

exports[`differ > works with empty old code 1`] = `
{
  "lineIds": [
    0.3333333333333333,
    0.6666666666666666,
  ],
  "steps": [
    [],
    [
      0.3333333333333333,
      0.6666666666666666,
    ],
    [],
  ],
}
`;
